--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "expose localhost to the world",
   "version": "0.0.8",
   "license": "MIT",
-  "type": "commonjs",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git://github.com/localtunnel/server.git"
